solve bug on hero section tablet design where the margin-left of header tag was making the header merge with the image

--- a/styles/_section-hero.scss
+++ b/styles/_section-hero.scss
@@ -3,22 +3,26 @@
 .nv-section-hero {
   padding-top: 64px;
 
-  @include media(tablet){
+  @include media(tablet) {
     display: grid;
     grid-template-columns: 339px 1fr;
     gap: 69px;
     padding-top: 62px;
+    @include container-left;
+  }
+
+  @include media(laptop) {
+    grid-template-columns: 445px 1fr;
+    gap: 125px;
   }
 
   .header {
     @include container;
-    
-    @include media(tablet){
-      margin-right: 0;
-      margin-top: 60px;
+
+    @include media(tablet) {
+      margin: 60px 0px 0px;
       width: 100%;
     }
-
 
     .title {
       font-weight: 900;
@@ -35,7 +39,7 @@
       line-height: 26px;
       color: #7b8bad;
 
-      @include media(tablet){
+      @include media(tablet) {
         margin-top: 34px;
       }
     }
@@ -46,7 +50,7 @@
       gap: 32px;
       align-items: center;
 
-      @include media(tablet){
+      @include media(tablet) {
         margin-top: 39px;
         gap: 37px;
       }
@@ -63,7 +67,7 @@
       background: #f16718;
       border-radius: 8px;
 
-      @include media(tablet){
+      @include media(tablet) {
         padding: 16px 27px 16px 26px;
       }
 
@@ -88,9 +92,14 @@
     height: 331px;
     position: relative;
 
-    @include media(tablet){
+    @include media(tablet) {
       margin: 0;
+      width: 100%;
       height: 425px;
+    }
+
+    @include media(laptop) {
+      width: 100%;
     }
 
     .image {
